--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <header>
-  <h1>Ementa Digital / Digital Menu</h1>
+  <h1>Pastelaria Esplanada - Ementa Digital</h1>
 </header>
 
 <div id="lang-container" class="lang-select">
