--- a/index.html
+++ b/index.html
@@ -5,37 +5,34 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Pastelaria Esplanada - Ementa Digital</title>
   <style>
-    body { font-family: Arial,sans-serif; margin:0;padding:0;background:#fff;color:#333; }
-    header { background:#0077cc;color:white;padding:1em;text-align:center; }
-    footer { background:#f0f0f0;padding:1em;text-align:center;font-size:0.9em;color:#555; }
-    main { padding:1.5em;text-align:center; }
-    .section { display:none; }
-    .visible { display:block; }
-    img{max-width:80%;height:auto;border-radius:8px;margin-bottom:1em;}
-    button{margin:.5em;padding:.8em 1.5em;font-size:1.05em;cursor:pointer;}
-    .navigation{margin-top:1.5em;}
-    #allergen-info{display:none;background:#fff;padding:1em;margin:1em auto;border:1px solid #ccc;border-radius:8px;max-width:600px;}
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#fff; color:#333; }
+    header { background: #0077cc; color: white; padding: 1em; text-align:center; }
+    main { padding: 1.5em; text-align: center; }
+    .section { display: none; }
+    .visible { display: block; }
+    img { max-width: 80%; height: auto; border-radius: 8px; margin-bottom: 1em; }
+    button { margin: .5em; padding: .8em 1.5em; font-size: 1.05em; cursor: pointer; }
+    .navigation { margin-top: 1.5em; }
+    #allergen-info { display: none; background: #fff; padding: 1em; margin: 1em auto; border: 1px solid #ccc; border-radius: 8px; max-width: 600px; }
+    footer { background: #f0f0f0; padding: 1em; text-align: center; font-size: 0.9em; color: #555; }
   </style>
 </head>
 <body>
   <header><h1>Pastelaria Esplanada - Ementa Digital</h1></header>
   <main>
-    <!-- 1. Escolha de idioma -->
+    <!-- Escolha de idioma -->
     <div id="lang-select" class="section visible">
       <p><strong>Selecione o idioma / Select language</strong></p>
       <button onclick="selectLanguage('pt')">Português 🇵🇹</button>
       <button onclick="selectLanguage('en')">English 🇬🇧</button>
     </div>
 
-    <!-- Rodapé temporário na escolha de idioma -->
-    <footer id="footer-welcome" class="visible">
-      <p>Bem-Vindo</p>
-    </footer>
+    <footer id="footer-welcome" class="visible"><p>Bem-Vindo</p></footer>
 
-    <!-- 2. Escolha de menu PT -->
+    <!-- Menus PT -->
     <div id="menu-select-pt" class="section">
       <p><strong>Escolha o menu</strong></p>
-      <button onclick="showSection('pt-breakfast')">Pequeno‑Almoço</button>
+      <button onclick="showSection('pt-breakfast')">Pequeno-Almoço</button>
       <button onclick="showSection('pt-lunch')">Almoço</button>
       <button onclick="showSection('pt-snack')">Lanche</button>
       <button onclick="showSection('pt-dinner')">Jantar</button>
@@ -43,18 +40,46 @@
       <div class="navigation"><button onclick="goBackToLang()">⬅ Voltar</button></div>
     </div>
 
-    <!-- 3. Escolha de menu EN -->
-    <div id="menu-select-en" class="section">
-      <p><strong>Select a menu</strong></p>
-      <button onclick="showSection('en-breakfast')">Breakfast</button>
-      <button onclick="showSection('en-lunch')">Lunch</button>
-      <button onclick="showSection('en-snack')">Snack</button>
-      <button onclick="showSection('en-dinner')">Dinner</button>
-      <button onclick="showSection('en-dish')">Dish of the Day</button>
-      <div class="navigation"><button onclick="goBackToLang()">⬅ Back</button></div>
+    <div id="pt-breakfast" class="section">
+      <img src="breakfast.jpg" alt="Pequeno-Almoço">
+      <h2>Pequeno-Almoço</h2>
+      <p>Café, sumo de laranja natural, croissant ou torrada com manteiga ou compota.</p>
+      <div class="navigation">
+        <button onclick="showSection('menu-select-pt')">⬅ Voltar</button>
+        <button onclick="sayGoodbye()">Sair</button>
+      </div>
     </div>
 
-    <!-- 4. Menu Prato do Dia (PT/EN) -->
+    <div id="pt-lunch" class="section">
+      <img src="lunch.jpg" alt="Almoço">
+      <h2>Almoço</h2>
+      <p>Prato do dia (carne ou peixe), bebida (água ou copo de vinho), sobremesa e café.</p>
+      <div class="navigation">
+        <button onclick="showSection('menu-select-pt')">⬅ Voltar</button>
+        <button onclick="sayGoodbye()">Sair</button>
+      </div>
+    </div>
+
+    <div id="pt-snack" class="section">
+      <img src="snack.jpg" alt="Lanche">
+      <h2>Lanche</h2>
+      <p>Tosta mista ou bolo caseiro, sumo natural ou chá.</p>
+      <div class="navigation">
+        <button onclick="showSection('menu-select-pt')">⬅ Voltar</button>
+        <button onclick="sayGoodbye()">Sair</button>
+      </div>
+    </div>
+
+    <div id="pt-dinner" class="section">
+      <img src="dinner.jpg" alt="Jantar">
+      <h2>Jantar</h2>
+      <p>Sopa, prato principal à escolha, bebida, sobremesa e café.</p>
+      <div class="navigation">
+        <button onclick="showSection('menu-select-pt')">⬅ Voltar</button>
+        <button onclick="sayGoodbye()">Sair</button>
+      </div>
+    </div>
+
     <div id="pt-dish" class="section">
       <h2>Prato do Dia</h2>
       <p>Arroz de Polvo à Esplanada – €9,50</p>
@@ -64,16 +89,7 @@
       </div>
     </div>
 
-    <div id="en-dish" class="section">
-      <h2>Dish of the Day</h2>
-      <p>Octopus Rice à Esplanada – €9.50</p>
-      <div class="navigation">
-        <button onclick="showSection('menu-select-en')">⬅ Back</button>
-        <button onclick="sayGoodbye()">Exit</button>
-      </div>
-    </div>
-
-    <!-- 5. Goodbye section -->
+    <!-- Goodbye -->
     <div id="goodbye" class="section">
       <h2>Obrigado pela visita! / Thanks for visiting!</h2>
       <p>Esperamos vê-lo em breve. / We hope to see you soon.</p>
@@ -93,36 +109,38 @@
     </div>
   </main>
 
-  <footer id="footer-final" style="display:none;">
-    <p>Até breve</p>
-  </footer>
+  <footer id="footer-final" style="display:none;"><p>Até breve</p></footer>
 
   <script>
-    function hideAll(){
-      document.querySelectorAll('.section').forEach(e=>e.classList.remove('visible'));
+    function hideAll() {
+      document.querySelectorAll('.section').forEach(e => e.classList.remove('visible'));
       document.getElementById('footer-welcome').style.display = 'none';
       document.getElementById('footer-final').style.display = 'none';
     }
-    function selectLanguage(l){
+    function selectLanguage(l) {
       hideAll();
-      document.getElementById(l==='pt'?'menu-select-pt':'menu-select-en').classList.add('visible');
+      document.getElementById(l === 'pt' ? 'menu-select-pt' : 'menu-select-en').classList.add('visible');
     }
-    function showSection(id){
+    function showSection(id) {
       hideAll();
       document.getElementById(id).classList.add('visible');
     }
-    function goBackToLang(){
+    function goBackToLang() {
       hideAll();
       document.getElementById('lang-select').classList.add('visible');
       document.getElementById('footer-welcome').style.display = 'block';
     }
-    function sayGoodbye(){
+    function sayGoodbye() {
       hideAll();
       document.getElementById('goodbye').classList.add('visible');
       document.getElementById('footer-final').style.display = 'block';
     }
-    function showAllergen(){document.getElementById('allergen-info').style.display='block'}
-    function hideAllergen(){document.getElementById('allergen-info').style.display='none'}
+    function showAllergen() {
+      document.getElementById('allergen-info').style.display = 'block';
+    }
+    function hideAllergen() {
+      document.getElementById('allergen-info').style.display = 'none';
+    }
   </script>
 </body>
 </html>
