--- a/index.html
+++ b/index.html
@@ -38,7 +38,66 @@
       <div class="navigation"><button onclick="goBackToLang()">⬅ Voltar</button></div>
     </div>
 
-    <div id="pt-breakfast" class="section">
+    
+    <div id="menu-select-en" class="section">
+      <p><strong>Select a menu</strong></p>
+      <button onclick="showSection('en-breakfast')">Breakfast</button>
+      <button onclick="showSection('en-lunch')">Lunch</button>
+      <button onclick="showSection('en-snack')">Snack</button>
+      <button onclick="showSection('en-dinner')">Dinner</button>
+      <button onclick="showSection('en-dish')">Dish of the Day</button>
+      <div class="navigation"><button onclick="goBackToLang()">⬅ Back</button></div>
+    </div>
+
+    <div id="en-breakfast" class="section">
+      <img src="breakfast.jpg" alt="Breakfast">
+      <h2>Breakfast</h2>
+      <p>Coffee, fresh orange juice, croissant or toast with butter or jam.</p>
+      <div class="navigation">
+        <button onclick="showSection('menu-select-en')">⬅ Back</button>
+        <button onclick="sayGoodbye()">Exit</button>
+      </div>
+    </div>
+
+    <div id="en-lunch" class="section">
+      <img src="lunch.jpg" alt="Lunch">
+      <h2>Lunch</h2>
+      <p>Dish of the day (meat or fish), drink (water or glass of wine), dessert and coffee.</p>
+      <div class="navigation">
+        <button onclick="showSection('menu-select-en')">⬅ Back</button>
+        <button onclick="sayGoodbye()">Exit</button>
+      </div>
+    </div>
+
+    <div id="en-snack" class="section">
+      <img src="snack.jpg" alt="Snack">
+      <h2>Snack</h2>
+      <p>Toasted sandwich or homemade cake, fresh juice or tea.</p>
+      <div class="navigation">
+        <button onclick="showSection('menu-select-en')">⬅ Back</button>
+        <button onclick="sayGoodbye()">Exit</button>
+      </div>
+    </div>
+
+    <div id="en-dinner" class="section">
+      <img src="dinner.jpg" alt="Dinner">
+      <h2>Dinner</h2>
+      <p>Soup, main course of choice, drink, dessert and coffee.</p>
+      <div class="navigation">
+        <button onclick="showSection('menu-select-en')">⬅ Back</button>
+        <button onclick="sayGoodbye()">Exit</button>
+      </div>
+    </div>
+
+    <div id="en-dish" class="section">
+      <h2>Dish of the Day</h2>
+      <p>Octopus Rice à Esplanada – €9.50</p>
+      <div class="navigation">
+        <button onclick="showSection('menu-select-en')">⬅ Back</button>
+        <button onclick="sayGoodbye()">Exit</button>
+      </div>
+    </div>
+<div id="pt-breakfast" class="section">
       <img src="breakfast.jpg" alt="Pequeno-Almoço">
       <h2>Pequeno-Almoço</h2>
       <p>Café, sumo de laranja natural, croissant ou torrada com manteiga ou compota.</p>
