--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
       <button onclick="goBackToLang()">↻ Nova Consulta / New Visit</button>
       <hr>
       <h3>Informações úteis</h3>
-      <p><strong>Horário:</strong> Seg–Dom, 07h–20h</p>
-      <p>📍 Praça Mercado 17, 7540‑135 Santiago do Cacém</p>
-      <p>📞 <a href="tel:+351269822581">269 822 581</a> | 📱 <a href="https://wa.me/351912345678">WhatsApp 912 345 678</a></p>
+      <p><strong>Horário:</strong> XXX–XXX, XXX–XXX</p>
+      <p>📍 XXXXX XXXXX XX, XXXX‑XXX XXXXX XX XXXXX</p>
+      <p>📞 <a href="tel:+351XXXXXXXXX">XXXXXXXXX</a> | 📱 <a href="https://wa.me/XXXXXXX">WhatsApp XXXXXXX</a></p>
       <p>Siga-nos: <a href="#" target="_blank">Instagram</a> | <a href="#" target="_blank">Facebook</a></p>
-      <p><em>"Bom apetite – servimos com carinho!"</em></p>
+      <p><em>"Volte Sempre!"</em></p>
       <button onclick="showAllergen()">⚠️ Informação sobre alergénios</button>
       <div id="allergen-info">
         <p><strong>Alergénios presentes:</strong> Glúten, ovos, leite, frutos de casca rija, soja, peixe, moluscos, crustáceos, aipo, mostarda, sementes de sésamo e dióxido de enxofre.</p>
