--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Pastelaria Esplanada - Ementa Digital</title>
+  <title>Pastelaria XXXXXXXXX - Ementa Digital</title>
   <style>
     body { font-family: Arial, sans-serif; margin:0; padding:0; background:#fff; color:#333; }
     header { background: #0077cc; color: white; padding: 1em; text-align:center; }
@@ -152,11 +152,11 @@
       <button onclick="goBackToLang()">↻ Nova Consulta / New Visit</button>
       <hr>
       <h3>Informações úteis</h3>
-      <p><strong>Horário:</strong> XXX–XXX, XXX–XXX</p>
-      <p>📍 XXXXX XXXXX XX, XXXX‑XXX XXXXX XX XXXXX</p>
+      <p><strong>Horário:</strong> XXX–XXX, XXh–XXh</p>
+      <p>Morada: XXXXX XXXXX XX, XXXX‑XXX XXXXX XX XXXXX</p>
       <p>📞 <a href="tel:+351XXXXXXXXX">XXXXXXXXX</a> | 📱 <a href="https://wa.me/XXXXXXX">WhatsApp XXXXXXX</a></p>
       <p>Siga-nos: <a href="#" target="_blank">Instagram</a> | <a href="#" target="_blank">Facebook</a></p>
-      <p><em>"Volte Sempre!"</em></p>
+      <p><em>"Volte sempre!"</em></p>
       <button onclick="showAllergen()">⚠️ Informação sobre alergénios</button>
       <div id="allergen-info">
         <p><strong>Alergénios presentes:</strong> Glúten, ovos, leite, frutos de casca rija, soja, peixe, moluscos, crustáceos, aipo, mostarda, sementes de sésamo e dióxido de enxofre.</p>
