--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Pastelaria XXXXXXXXX - Ementa Digital</title>
+  <title>Pastelaria Esplanada - Ementa Digital</title>
   <style>
     body { font-family: Arial, sans-serif; margin:0; padding:0; background:#fff; color:#333; }
     header { background: #0077cc; color: white; padding: 1em; text-align:center; }
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <header><h1>Pastelaria Esplanada - Ementa Digital</h1></header>
+  <header><h1>Pastelaria XXXXXXXXX - Ementa Digital</h1></header>
   <main>
     <div id="lang-select" class="section visible">
       <p><strong>Selecione o idioma / Select language</strong></p>
@@ -153,8 +153,8 @@
       <hr>
       <h3>Informações úteis</h3>
       <p><strong>Horário:</strong> XXX–XXX, XXh–XXh</p>
-      <p>Morada: XXXXX XXXXX XX, XXXX‑XXX XXXXX XX XXXXX</p>
-      <p>📞 <a href="tel:+351XXXXXXXXX">XXXXXXXXX</a> | 📱 <a href="https://wa.me/XXXXXXX">WhatsApp XXXXXXX</a></p>
+      <p><strong>Morada:</strong> XXXXX XXXXX XX, XXXX‑XXX XXXXX XX XXXXX</p>
+      <p><strong>Telefone:</strong> XXX XXX XXX</p>
       <p>Siga-nos: <a href="#" target="_blank">Instagram</a> | <a href="#" target="_blank">Facebook</a></p>
       <p><em>"Volte sempre!"</em></p>
       <button onclick="showAllergen()">⚠️ Informação sobre alergénios</button>
@@ -165,7 +165,7 @@
     </div>
   </main>
 
-  <footer id="footer-final" style="display:none;"><p>Até breve</p></footer>
+  <footer id="footer-final" style="display:none;"><p>Até breve!</p></footer>
 
   <script>
     function hideAll() {
